# mcp-standards-server

./: .bandit  .coverage.framework.1488890.XUaVonnx  .coverage.framework.2881042.XvvYyvkx  .coveragerc  .dockerignore  .env.example  .gitignore  .semgrepignore  .yamllint.yml  CHANGELOG.md  CICD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_EXECUTION_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_STANDARDS.md  DOCUMENTATION_GAP_ANALYSIS.md  DOCUMENTATION_UPDATES_SUMMARY.md  Dockerfile  ECOSYSTEM_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_VARIABLES.md  HUGGINGFACE_RATE_LIMIT_FIX.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_MANAGEMENT_OPTIMIZATION_SUMMARY.md  MANIFEST.in  MANIFEST.yaml  MCP_EVALUATION_PLAN.md  MCP_EVALUATION_REPORT.md  MCP_IMPLEMENTATION_STATUS.md  METRICS_INTEGRATION.md  OUTSTANDING_TASKS.md  Project_plan.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  REPOSITORY_INDEX.json  REPOSITORY_INDEX.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SECURITY_SUMMARY.md  (+56 more)
.chroma_db/: chroma.sqlite3
.claude/: settings.local.json
.github/: cliff.toml  dependabot.yml  labeler.yml
.github/workflows/: README.md  benchmark.yml  check-package.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot.yml  deploy-docs.yml  docker-build-test.yml  docs.yml  e2e-tests.yml  maintenance.yml  nist-compliance.yml  pr-validation.yml  publish-pypi.yml  release.yml  review-automation.yml  security-scanning.yml  security.yml  standards-compliance.yml
.test_chroma/: chroma.sqlite3
archive/test_files/: test_applicable_standards.py  test_available_standards.py  test_compliance_mapping.py  test_compliance_mapping_corrected.py  test_search_standards.py  test_security_code_review.py
bandit-artifacts/: bandit-report.json
benchmark_results/20250710_102815/: summary.json
benchmark_results/20250710_103114/: comprehensive_results.json
benchmark_results/baseline/: results.json  summary.json
benchmarks/: BENCHMARKING_SUMMARY.md  PERFORMANCE_BASELINE.md  README.md  __init__.py  analyzer_performance.py  cache_performance.py  check_regression.py  comprehensive_benchmark.py  hybrid_vs_single.py  mcp_benchmarks.py  run_benchmarks.py  semantic_search_benchmark.py  simple_benchmarks.py  simple_runner.py  test_benchmark.py  token_optimization_benchmark.py
benchmarks/framework/: __init__.py  base.py  comparison.py  profiler.py  stats.py  visualization.py
benchmarks/load/: __init__.py  breaking_point.py  resource_tracking.py  scalability.py  stress_test.py
benchmarks/mcp_tools/: __init__.py  cold_start.py  latency.py  response_time.py  throughput.py
benchmarks/memory/: __init__.py  allocation_tracking.py  leak_detection.py  memory_growth.py  memory_usage.py
benchmarks/monitoring/: __init__.py  alerts.py  dashboard.py  history.py  metrics.py
benchmarks/reports/: __init__.py  html_report.py
config/: cache.example.yaml
data/standards/: ADVANCED_ACCESSIBILITY_STANDARDS.md  ADVANCED_API_DESIGN_STANDARDS.md  ADVANCED_API_DESIGN_STANDARDS.yaml  ADVANCED_TESTING_STANDARDS.md  AI_ML_OPERATIONS_STANDARDS.md  AI_ML_OPERATIONS_STANDARDS.yaml  AR_VR_DEVELOPMENT_STANDARDS.md  AR_VR_DEVELOPMENT_STANDARDS.yaml  BLOCKCHAIN_WEB3_STANDARDS.md  BLOCKCHAIN_WEB3_STANDARDS.yaml  BUSINESS_CONTINUITY_DISASTER_RECOVERY_STANDARDS.md  CLOUD_NATIVE_STANDARDS.yaml  CODE_REVIEW_STANDARDS.md  CODING_STANDARDS.yaml  COMPLIANCE_STANDARDS.yaml  COST_OPTIMIZATION_STANDARDS.yaml  DATABASE_DESIGN_OPTIMIZATION_STANDARDS.md  DATABASE_DESIGN_OPTIMIZATION_STANDARDS.yaml  DATA_ENGINEERING_STANDARDS.yaml  DATA_PRIVACY_COMPLIANCE_STANDARDS.md  DEPLOYMENT_RELEASE_STANDARDS.md  DEVELOPER_EXPERIENCE_STANDARDS.md  DEVOPS_PLATFORM_STANDARDS.yaml  DOCUMENTATION_WRITING_STANDARDS.md  EVENT_DRIVEN_STANDARDS.yaml  FRONTEND_MOBILE_STANDARDS.yaml  GAMING_DEVELOPMENT_STANDARDS.md  GAMING_DEVELOPMENT_STANDARDS.yaml  INTERNATIONALIZATION_LOCALIZATION_STANDARDS.md  IOT_EDGE_COMPUTING_STANDARDS.md  IOT_EDGE_COMPUTING_STANDARDS.yaml  KNOWLEDGE_MANAGEMENT_STANDARDS.yaml  LEGAL_COMPLIANCE_STANDARDS.yaml  MODERN_SECURITY_STANDARDS.yaml  MONITORING_INCIDENT_RESPONSE_STANDARDS.md  OBSERVABILITY_STANDARDS.yaml  PROJECT_PLANNING_STANDARDS.md  (+16 more)
docs/: API_DOCUMENTATION.md  CACHE_POPULATION_GUIDE.md  CLAUDE_INTEGRATION.md  CONFIGURATION_GUIDE.md  CREATING_STANDARDS_GUIDE.md  DOCKER_OPTIMIZATION.md  DOCUMENTATION_STATUS.md  EXPORT_FUNCTIONALITY.md  MCP_STANDARDS_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SECURITY_CONFIGURATION.md  USAGE_GUIDE.md  WORKFLOW_FIXES.md  analyzers-implementation.md  caching.md  enhanced-control-detection.md  llm-optimization.md  standards-versioning.md  token-optimization.md
evaluation/: README.md
examples/: README.md  cache_demo.py  cache_usage.py  rule_engine_demo.py  run_e2e_tests_example.py  semantic_search_demo.py  token_optimization_demo.py
monitoring/: prometheus.yml
scripts/: analyze_memory_profile.py  build_docker.sh  check-compliance.py  detect_performance_regression.py  generate-controls-matrix.py  import_standards.py  migrate_to_hybrid.py  publish_standards.py  reorganize_tests.py  reviewer_tools.py  run_e2e_tests.sh  update_dates.py  validate-nist-annotations.py  validate_ecosystem.py
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: __init__.py  __main__.py  http_server.py  main.py  mcp_server.py  server.py
templates/: TEMPLATE_INDEX.md
test-results-temp/: coverage.xml
tests/: COVERAGE_SUMMARY.md  FINAL_TEST_RESULTS.md  README.md  README_SYNC_TESTS.md  REORGANIZATION_STATUS.md  TEST_COVERAGE_ACHIEVEMENT.md  __init__.py  conftest.py  mocks.py  test_cli.py  test_cli_standards.py  test_core_mcp_handlers.py  test_core_mcp_server.py  test_core_standards_engine.py  test_core_standards_handlers.py  test_logging.py  test_mcp_server.py  test_models.py  test_models_additional.py  test_models_coverage.py  test_semantic_search.py  test_server_additional.py  test_standards_engine_comprehensive.py  test_standards_engine_final.py  test_standards_engine_fixed.py  test_versioning.py
web/: .env.example  DEPLOYMENT_VERIFIED.md  README.md  docker-compose.yml  start.sh
(+534 files in other folders)
